# ohtu_miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: Loppuraportti.md  burndown.md  definition_of_done.md  kaytto_ohje.md  retro1.md  sprintti1.md  userstory.md
src/: AppLibrary.py  app.py  index.py  reader_writer.py
src/entities/: book.py  reference.py
src/repositories/: datahandler.py
src/services/: filter_service.py  reference_service.py
src/tests/: AppLibrary.py  add_book.robot  app_test.py  article.robot  book.robot  datahandler_test.py  filter.robot  filter_service_test.py  new_file.robot  reference_service_test.py  resource.robot  sort.robot  techreport.robot  thesis.robot  unpublished.robot
src/tests/robot/: book.robot  new_file.robot  remove.robot  resource.robot  sort.robot  techreport.robot  thesis.robot  unpublished.robot
src/ui/: app.py  reader_writer.py
