[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Nana Reinikainen <nana.reinikainen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bibtexparser = "^1.4.0"
pyinquirer = "^1.0.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
coverage = "^6.5.0"
pytest = "^7.2.0"
robotframework = "^6.0.1"
invoke = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
